[package]
name = "hyper-async-test"
version = "0.1.0"
authors = ["Walther Chen <walther.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util-preview = { version = "0.3.0-alpha.17" }
hyper = { version = "0.13.0-alpha.4", features = ["runtime", "unstable-stream"] }
hyper-tls = "0.4.0-alpha.4"
serde_json = "1.0.40"
serde = { version = "1.0.98", features = ["derive"] }
tokio = "0.2.0-alpha.6"
tracing = "0.1.10"
tracing-futures = { version = "0.1.1", features = ["std-future"] }
tracing-subscriber = "0.2.0-alpha.1"
